--- a/src/main/resources/baseline/deleteItemDialogBox.fxml
+++ b/src/main/resources/baseline/deleteItemDialogBox.fxml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dialogboxes.DeleteItemDialogBox">
    <children>
-      <ChoiceBox fx:id="listChoiceBox" layoutX="170.0" layoutY="30.0" prefWidth="180.0" />
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="List to remove item from:" x="20.0" y="47.0" />
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Item to remove:" x="20.0" y="87.0" />
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Item to remove:" x="20.0" y="37.0" />
       <Button fx:id="removeItemButton" layoutX="230.0" layoutY="180.0" mnemonicParsing="false" onMouseClicked="#removeItem" prefWidth="100.0" text="Remove Item" />
       <Button fx:id="cancelButton" layoutX="70.0" layoutY="180.0" mnemonicParsing="false" onMouseClicked="#closeDialogBox" prefWidth="100.0" text="Cancel" />
-      <ChoiceBox fx:id="itemChoiceBox" layoutX="170.0" layoutY="70.0" prefWidth="180.0" />
+      <ComboBox fx:id="itemChoiceBox" layoutX="170.0" layoutY="20.0" prefWidth="180.0" promptText="Select Item" visibleRowCount="5" />
    </children>
 </AnchorPane>
